Fixed carousel buttons

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
 
     <!-- photo gallery -->
-    <section id="park" class="carousel slide">
+    <section id="park" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#park" data-bs-slide-to="0" class="active"></button>
             <button type="button" data-bs-target="#park" data-bs-slide-to="1"></button>
@@ -52,10 +52,10 @@
         </div>
 
         <!-- nav buttons -->
-        <button class="carousel-control-prev" type="button" data-bs-target="#park" data-bs-slide-to="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#park" data-bs-slide="prev">
             <span class="carousel-control-prev-icon"></span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#park" data-bs-slide-to="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#park" data-bs-slide="next">
             <span class="carousel-control-next-icon"></span>
         </button>
     </section>
